# nautilus-webui

./: .gitignore  .pre-commit-config.yaml  README.md  SOW.md
backend/: .flake8  .gitignore  .nvim.lua  Dockerfile  Pipfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  prestart.sh  pyproject.toml  rq-worker  tasks.py
backend/api/: constants.py  email.py  entrypoint.py  files.py  main.py  redis.py  s3.py  store.py  workers.py  zimfarm.py
backend/api/database/: __init__.py  models.py  utils.py
backend/api/routes/: __init__.py  archives.py  files.py  projects.py  users.py  utils.py
backend/api/storage/: __init__.py  s3.py  webdav.py
backend/api/templates/: email_body.html  email_subject.txt
backend/migrations/: env.py
backend/migrations/versions/: 4d766c1cc6a3_update_archive_s_model.py  6ed3d1dc2c99_add_used_space_to_project.py  8da678641556_first_version.py  b9fb42d00930_webdav_path.py  be9763d49e5f_archives_completed_on.py  ffa3ecb69bc6_order.py
backend/src/: alembic.ini
backend/src/backend/: __init__.py  constants.py  database.py  entrypoint.py  main.py  models.py
backend/src/backend/database/: __init__.py  models.py
backend/src/backend/databse/: __init__.py
backend/src/backend/routes/: projects.py  users.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 39d6ebb560f7_first_revision.py  (+10 more)
backend/tests/: conftest.py  test_main.py  test_projects_route.py  test_routers.py  test_users_route.py
backend/tests/routes/: test_archives.py  test_files.py  test_main_route.py  test_projects.py  test_users.py
dev/: .env  (+3 more)
(+70 files in other folders)
