[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus-webui"
version = "0.0.1"
requires-python = ">=3.11"
description = "SaaS Web UI for nautilus"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "fastapi <1.0.0,>=0.95.2",
    "uvicorn[standard] <1.0.0,>=0.22.0",
    "httpx <1.0.0,>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "invoke <3.0.0,>=2.1.2",
    "black <24.0.0,>=23.3.0",
    "pytest <8.0.0,>=7.3.1",
    "isort <6.0.0,>=5.12.0",
    "flake8 <7.0.0,>=6.0.0",
    "pytest <8.0.0,>=7.3.1",
    "coverage <8.0.0,>=7.2.6",
    "pytest-cov <5.0.0,>=4.1.0",
]
